Generalize GroupActivityCard to ActivityCard; introduce hierarchical layout based on views

--- a/src/styles/activity-card.styl
+++ b/src/styles/activity-card.styl
@@ -1,7 +1,7 @@
-.group-activity
-  padding: 20px 2px
+.activity
+  margin: 30px 0
 
-.group-activity-name
+.activity-name
   font-size: 12px
   font-family: 'Roboto', sans-serif
   color: rgba(0,0,0, .87)
