--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,4 +1,4 @@
-@import 'group-activity'
+@import 'activity-card'
 
 *
   box-sizing: border-box
@@ -29,8 +29,12 @@ html, body, #app
   margin: 0 auto
   padding: 50px 0
 
-.main-groups-title
+.main-section-title
   color: rgba(0,0,0, .54)
   font-size: 34px
   font-family: 'Roboto', sans-serif
   font-weight: 100
+  line-height: 1.2em
+
+.main-section
+  padding: 20px 2px
