Using express-like router to manage transformation from appstate to react components

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,4 +1,6 @@
 @import 'activity-card'
+@import 'active-track'
+@import 'card'
 
 *
   box-sizing: border-box
@@ -23,6 +25,7 @@ html, body, #app
   background-color: #F0F0F0
   width: 40%
   height: 100%
+  padding: 20px
 
 .main-container
   width: 600px
