--- a/src/styles/activity-card.styl
+++ b/src/styles/activity-card.styl
@@ -5,4 +5,8 @@
   font-size: 12px
   font-family: 'Roboto', sans-serif
   color: rgba(0,0,0, .87)
-  margin: 0.5em 0
+  margin: 1em 0
+  text-decoration: none
+
+.activity-name:hover
+  color: rgb(51, 102, 204)
