--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,6 +1,8 @@
 @import 'activity-card'
 @import 'active-track'
 @import 'card'
+@import 'tracklist'
+@import 'group-profile'
 
 *
   box-sizing: border-box
@@ -18,14 +20,17 @@ html, body, #app
 
 .main-view
   width: 60%
-  height: 100%
-  overflow: hidden
+  position: relative
 
 .sidebar-view
   background-color: #F0F0F0
   width: 40%
   height: 100%
-  padding: 20px
+  padding: 0 20px
+  border-left: 1px solid #E2E2E2
+
+.sidebar-content
+  padding: 20px 0
 
 .main-container
   width: 600px
@@ -41,3 +46,21 @@ html, body, #app
 
 .main-section
   padding: 20px 2px
+
+.scroll-wrapper
+  height: 100%
+  overflow: hidden
+
+@media screen and (min-width: 1100px)
+  .main-view
+    width: calc(100% - 550px)
+
+  .sidebar-view
+    width: 550px
+
+@media screen and (min-width: 1500px)
+  .main-view
+    width: calc(100% - 600px)
+
+  .sidebar-view
+    width: 600px
