--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -51,6 +51,9 @@ html, body, #app
   height: 100%
   overflow: hidden
 
+.icon
+  display: inline-block
+
 @media screen and (min-width: 1100px)
   .main-view
     width: calc(100% - 550px)
