--- a/src/styles/tracklist.styl
+++ b/src/styles/tracklist.styl
@@ -23,9 +23,20 @@
   border-radius: 2px
   cursor: pointer
   transition: background-color 0.2s, border-color 0.2s
+  box-sizing: content-box
+
+  .icon
+    width: 40px
+    height: 40px
+    padding: 8px
+    transition: fill 0.2s
+    fill: #EEE
 
 .play-btn:hover
   border-color: accent-color
+
+  .icon
+    fill: accent-color
 
 .tracklist-item-title,
 .tracklist-item-artist
