--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
+  <%= iconsSvg %>
   <div id="app"></div>
   <script src="app.js"></script>
 </body>
