--- a/src/styles/tracklist.styl
+++ b/src/styles/tracklist.styl
@@ -48,6 +48,14 @@
     transform: rotate(-90deg)
     fill: white
 
+.track-duration
+  position: absolute
+  right: 0
+  width: 40px
+  margin-right: 15px
+  height: 40px
+  margin-top: 21px
+
 .tracklist-item-title,
 .tracklist-item-artist
   text-overflow: ellipsis
@@ -55,8 +63,8 @@
   overflow: hidden
 
 .tracklist-item-desc
-  margin-right: 45px
-  margin-top: 5px
+  margin-right: 80px
+  margin-top: 7px
 
 .tracklist-header
   height: 40px
