Move active track component to a tracklist header

--- a/src/styles/active-track.styl
+++ b/src/styles/active-track.styl
@@ -5,8 +5,8 @@
   width: 100%
   height: 70px
   color: #616161
-  font-size: 0.8em
   font-family: 'Roboto', sans-serif
+  font-weight: 300
 
 .active-track-play-btn
   width: 40px
@@ -14,8 +14,11 @@
   background-color: #F44336
   margin: 15px
 
+.active-track-artist
+  font-weight: 500
+
 .active-track-duration
-  margin: 0 1em
+  margin: 0 15px
 
 .active-track-separator
   margin: 0 3px
