--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -12,6 +12,9 @@ html, body, #app
   padding: 0
   width: 100%
   height: 100%
+  font-family: 'Roboto', sans-serif
+  font-weight: 400
+  font-style: normal
 
 .app-container
   display: flex
@@ -26,7 +29,7 @@ html, body, #app
   background-color: #F0F0F0
   width: 40%
   height: 100%
-  padding: 0 20px
+  padding: 0 25px
   border-left: 1px solid #E2E2E2
 
 .sidebar-content
@@ -56,10 +59,10 @@ html, body, #app
 
 @media screen and (min-width: 1100px)
   .main-view
-    width: calc(100% - 550px)
+    width: calc(100% - 520px)
 
   .sidebar-view
-    width: 550px
+    width: 520px
 
 @media screen and (min-width: 1500px)
   .main-view
