--- a/src/styles/tracklist.styl
+++ b/src/styles/tracklist.styl
@@ -5,14 +5,7 @@
   color: #616161
   font-size: 0.8em
   font-family: 'Roboto', sans-serif
-  background-color: white
-  margin: 10px 0
   padding-bottom: 10px
-
-.tracklist-item
-  display: flex
-  height: 40px
-  margin: 25px 0
 
 .play-btn
   width: 40px
@@ -51,24 +44,38 @@
 .track-duration
   position: absolute
   right: 0
-  width: 40px
   margin-right: 15px
-  height: 40px
   margin-top: 21px
+  height: 40px
+
+.tracklist-item
+  display: flex
+  height: 40px
+  margin: 25px 0
+  font-size: 0.9em
+  font-family: 'Roboto', sans-serif
+  font-weight: 300
 
 .tracklist-item-title,
 .tracklist-item-artist
   text-overflow: ellipsis
   white-space: nowrap
   overflow: hidden
+  line-height: 1.4em
+
+.tracklist-item-artist
+  font-weight: 500
 
 .tracklist-item-desc
   margin-right: 80px
-  margin-top: 7px
+  margin-top: 6px
 
 .tracklist-header
-  height: 40px
+  height: 70px
   background-color: #FAFAFA
   text-align: center
-  line-height: 40px
   border-bottom: 1px solid #F3F3F3
+
+.tracklist-section-name
+  text-align: center
+  margin: 20px 15px -10px 15px
