Select active track from all tracks by given id

--- a/src/styles/active-track.styl
+++ b/src/styles/active-track.styl
@@ -22,3 +22,9 @@
 
 .active-track-separator
   margin: 0 3px
+
+.active-track-desc
+  text-overflow: ellipsis
+  white-space: nowrap
+  overflow: hidden
+  padding: 0 10px
