Move active track to sidebar top, fix it on this position

--- a/src/styles/group-profile.styl
+++ b/src/styles/group-profile.styl
@@ -1,5 +1,7 @@
+@import 'config'
+
 .group-profile
-  background-color: #3F51B5
+  background-color: base-color
 
 .group-profile-info
   font-family: 'Roboto'
