--- a/src/styles/active-track.styl
+++ b/src/styles/active-track.styl
@@ -2,14 +2,20 @@
 @import 'nib'
 
 .active-track
+  position: absolute
+  left: 0
+  top: 0
   display: flex
   align-items: center
   justify-content: space-between
   width: 100%
-  height: 70px
+  height: 90px
   color: #616161
   font-family: 'Roboto', sans-serif
   font-weight: 300
+  background-color: rgba(255, 255, 255, 0.95)
+  font-size: 12px
+  padding: 0 10px
 
 .active-track-artist
   font-weight: 500
