--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -13,6 +13,7 @@ html, body, #app
   font-family: 'Roboto', sans-serif
   font-weight: 400
   font-style: normal
+  font-size: 1rem
 
 .app-container
   display: flex
@@ -24,14 +25,9 @@ html, body, #app
   position: relative
 
 .sidebar-view
-  background-color: #F0F0F0
   width: 40%
   height: 100%
-  padding: 0 25px
   border-left: 1px solid #E2E2E2
-
-.sidebar-content
-  padding: 20px 0
 
 .main-container
   width: 600px
