--- a/src/styles/tracklist.styl
+++ b/src/styles/tracklist.styl
@@ -6,7 +6,12 @@
   color: #616161
   font-size: 0.8em
   font-family: 'Roboto', sans-serif
-  padding-bottom: 10px
+  padding: 30px 0 10px 0
+
+.tracklist-card
+  position: relative
+  height: 100%
+  padding: 0 10px
 
 .play-btn
   width: 40px
@@ -79,4 +84,3 @@
 
 .tracklist-section-name
   text-align: center
-  margin: 20px 15px -10px 15px
