Using solarized theme

--- a/src/styles/activity-card.styl
+++ b/src/styles/activity-card.styl
@@ -1,12 +1,10 @@
+@import 'config'
+
 .activity
   margin: 30px 0
 
 .activity-name
   font-size: 12px
   font-family: 'Roboto', sans-serif
-  color: rgba(0,0,0, .87)
   margin: 1em 0
   text-decoration: none
-
-.activity-name:hover
-  color: rgb(51, 102, 204)
