--- a/src/styles/config.styl
+++ b/src/styles/config.styl
@@ -1,3 +1,19 @@
-accent-color = #F98B13
-base-color = #3F52B5
 vendor-prefixes ?= webkit moz official
+
+base-color-03 = #002b36
+base-color-02 = #073642
+base-color-01 = #586e75
+base-color-00 = #657b83
+base-color-0  = #839496
+base-color-1  = #93a1a1
+base-color-2  = #eee8d5
+base-color-3  = #fdf6e3
+
+accent-yellow  = #b58900
+accent-orange  = #cb4b16
+accent-red     = #dc322f
+accent-magenta = #d33682
+accent-violet  = #6c71c4
+accent-blue    = #268bd2
+accent-cyan    = #2aa198
+accent-green   = #859900
