--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,6 +1,7 @@
 @import 'config'
 @import 'nib'
 @import 'card'
+@import 'theme-solarized'
 
 *
   box-sizing: border-box
@@ -35,8 +36,7 @@ html, body, #app
   padding: 50px 0
 
 .main-section-title
-  color: rgba(0,0,0, .54)
-  font-size: 34px
+  font-size: 26px
   font-family: 'Roboto', sans-serif
   font-weight: 100
   line-height: 1.2em
