Use sliding window to render only currently visible part of tracklist

--- a/src/styles/tracklist.styl
+++ b/src/styles/tracklist.styl
@@ -44,9 +44,11 @@
   height: 40px
 
 .tracklist-item
+  position: absolute
   display: flex
   height: 40px
-  margin: 25px 0
+  width: 100%
+  margin: 20px 0
   font-size: 0.9em
   font-family: 'Roboto', sans-serif
   font-weight: 300
