Create a progress indicator for active track

--- a/src/styles/active-track.styl
+++ b/src/styles/active-track.styl
@@ -7,7 +7,6 @@
   top: 0
   display: flex
   align-items: center
-  justify-content: space-between
   width: 100%
   height: 90px
   font-family: 'Roboto', sans-serif
@@ -19,9 +18,9 @@
 .active-track-artist
   font-weight: 500
 
-.active-track-duration
-  margin: 0 15px
-  min-width: 50px
+.active-track-time
+  margin: 0 15px 10px 15px
+  min-width: 65px
   text-align: right
 
 .active-track-separator
@@ -31,3 +30,11 @@
   text-overflow: ellipsis
   white-space: nowrap
   overflow: hidden
+  margin-bottom: 10px;
+  width: 79%
+
+.active-track-progress
+  position: absolute
+  left: 84px
+  top: 51px
+  width: 79%
