--- a/src/styles/theme-solarized.styl
+++ b/src/styles/theme-solarized.styl
@@ -52,3 +52,9 @@ accent-color = accent-violet
 
   .icon
     fill: #EEE
+
+.apl-bg-line
+  background-color: #EEE
+
+.apl-fg-line, .apl-seek
+  background-color: accent-color
