Add loaded indicator for active track

--- a/src/styles/audio-progress-line.styl
+++ b/src/styles/audio-progress-line.styl
@@ -3,7 +3,7 @@
   height: 10px
   cursor: pointer
 
-.apl-bg-line, .apl-fg-line
+.apl-bg-line, .apl-fg-line, .apl-load-line
   position: absolute
   height: 4px
   left: 0
@@ -17,6 +17,7 @@
 
 .apl-bg-line
   width: 100%
+  transition: width 0.1s
 
 .apl-seek
   position: absolute
