--- a/src/styles/theme-solarized.styl
+++ b/src/styles/theme-solarized.styl
@@ -56,5 +56,8 @@ accent-color = accent-violet
 .apl-bg-line
   background-color: #EEE
 
+.apl-load-line
+  background-color: #DDD
+
 .apl-fg-line, .apl-seek
   background-color: accent-color
