--- a/src/styles/tracklist.styl
+++ b/src/styles/tracklist.styl
@@ -5,12 +5,15 @@
   width: 100%
   font-size: 0.8em
   font-family: 'Roboto', sans-serif
-  padding: 30px 0 10px 0
+  padding: 90px 0 10px 0
 
 .tracklist-card
   position: relative
   height: 100%
   padding: 0 10px
+
+.tracklist-body
+  position: relative
 
 .play-btn
   width: 40px
@@ -75,3 +78,5 @@
 
 .tracklist-section-name
   text-align: center
+  color: base-color-0
+  margin-bottom: -10px
