--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,6 +10,7 @@
   <%= iconsSvg %>
   <div id="app"></div>
   <script src="/soundmanager2.js"></script>
+  <script src="/pouchdb.js"></script>
   <script src="/app.js"></script>
 </body>
 </html>
