--- a/src/styles/activity-card.styl
+++ b/src/styles/activity-card.styl
@@ -1,6 +1,7 @@
 @import 'config'
 
 .activity
+  position: relative
   margin: 30px 0
 
 .activity-name
@@ -8,3 +9,25 @@
   font-family: 'Roboto', sans-serif
   margin: 1em 0
   text-decoration: none
+
+.activity-chart-content
+  position: relative
+
+.activity-card-weekdays
+  position: absolute
+  left: 0
+  top: 0
+
+.activity-card-weekdays,
+.activity-card-months
+  font-size: 0.7em
+  color: base-color-1
+
+.activity-card-weekday
+  position: absolute
+  text-align: center
+  width: 100%
+
+.activity-card-months
+  width: 100%
+  display: flex
