Create an artist profile page

--- a/src/styles/theme-solarized.styl
+++ b/src/styles/theme-solarized.styl
@@ -4,6 +4,8 @@ accent-color = accent-violet
 .group-profile
   background-color: base-color-3
 
+.artist-profile
+  background-color: white
 
 .activity-item-0
   fill: base-color-2
@@ -22,10 +24,10 @@ accent-color = accent-violet
 
 .main-section-title,
 .group-profile-info,
-.activity-name
+.element-link
   color: base-color-00
 
-.activity-name:hover
+.element-link:hover
   color: accent-color
 
 .play-btn:hover
