--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -24,6 +24,8 @@ html, body, #app
 .main-view
   width: 60%
   position: relative
+  overflow: hidden
+  transition: background-color 0.3s
 
 .sidebar-view
   width: 40%
