Add styles to auth page

--- a/src/styles/theme-solarized.styl
+++ b/src/styles/theme-solarized.styl
@@ -61,5 +61,19 @@ accent-color = accent-violet
 .apl-load-line
   background-color: #DDD
 
-.apl-fg-line, .apl-seek
+.apl-fg-line,
+.apl-seek
   background-color: accent-color
+
+.auth
+  background-color: accent-color
+
+.auth-bg-circle .icon
+  fill: accent-color
+
+.auth-bg-circle .auth-vk-desc
+  color: #555
+
+.auth-bg-circle,
+.auth-bg-circle::before
+  background-color: white
