--- a/src/styles/theme-solarized.styl
+++ b/src/styles/theme-solarized.styl
@@ -77,3 +77,9 @@ accent-color = accent-violet
 .auth-bg-circle,
 .auth-bg-circle::before
   background-color: white
+
+.tabs-item
+  color: accent-color
+
+.tabs-item-active
+  border-bottom: 1px solid accent-color
