--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,6 +11,7 @@
   <div id="app"></div>
   <script src="/soundmanager2.js"></script>
   <script src="/pouchdb.js"></script>
+  <script src="/firebase.js"></script>
   <script src="/app.js"></script>
 </body>
 </html>
