--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -32,6 +32,7 @@ html, body, #app
   height: 100%
   border-left: 1px solid #E2E2E2
   transition: width 0.3s linear
+  position: relative
 
 .main-container
   width: 600px
