Using layers to place components on screen

--- a/src/styles/active-track.styl
+++ b/src/styles/active-track.styl
@@ -55,3 +55,11 @@
 
 .player-playlist-tabs-active
   height: 25px
+
+@media screen and (min-width: 1400px)
+  .player-body
+    padding: 0
+
+  .active-track-progress
+    left: 74px
+    right: 15px
