Using scroll layer in main component

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -23,6 +23,7 @@ html, body, #app
 
 .main-view
   width: 60%
+  height: 100%
   position: relative
   overflow: hidden
   transition: background-color 0.3s, width 0.3s linear
@@ -34,9 +35,10 @@ html, body, #app
   transition: width 0.3s linear
   position: relative
 
-.main-container
-  width: 600px
-  margin: 0 auto
+.main-view-container
+  height: 100%
+
+.main-view .scroll-body
   padding: 50px 0
 
 .main-section-title
