Using yui widget box model

--- a/src/styles/theme-solarized.styl
+++ b/src/styles/theme-solarized.styl
@@ -1,7 +1,7 @@
 accent-color = accent-violet
 
-.main-view,
-.group-profile
+.main-layout .ra-bounding-box,
+.group-layout .ra-bounding-box
   background-color: base-color-3
 
 .artist-profile
