--- a/src/styles/group-profile.styl
+++ b/src/styles/group-profile.styl
@@ -1,5 +1,11 @@
 @import 'config'
 
+.group-profile
+  display: flex
+  flex-direction: column
+  justify-content: space-around
+  height: 100%
+
 .group-profile-info
   font-family: 'Roboto'
   font-weight: 300
@@ -14,8 +20,4 @@
   margin: 20px auto
 
 .group-profile .activity
-  position: absolute
-  width: 600px
-  bottom: 50px;
-  left: 50%;
-  margin-left: - (@width / 2)
+  margin-top: 100px
