--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -22,18 +22,10 @@ html, body, #app
   height: 100%
 
 .main-view
-  width: 60%
+  width: 100%
   height: 100%
-  position: relative
   overflow: hidden
   transition: background-color 0.3s, width 0.3s linear
-
-.sidebar-view
-  width: 40%
-  height: 100%
-  border-left: 1px solid #E2E2E2
-  transition: width 0.3s linear
-  position: relative
 
 .main-view-container
   height: 100%
@@ -60,38 +52,28 @@ html, body, #app
 .player-body
   transition: margin-top 0.5s ease-in-out
 
-.tracklist-card
-  height: 100%
-
-.tracklist-card .track
-  position: absolute
-  padding: 0 10px
-
-.tracklist-card .tracklist
-  padding: 90px 0 40px 0
-
 .group-sidebar
   height: 100%
 
-@media screen and (min-width: 1100px)
-  .main-view
-    width: calc(100% - 520px)
+// @media screen and (min-width: 1100px)
+//   .main-view
+//     width: calc(100% - 520px)
 
-  .sidebar-view
-    width: 520px
+//   .sidebar-view
+//     width: 520px
 
-@media screen and (min-width: 1400px)
-  .main-view
-    width: 50%
+// @media screen and (min-width: 1400px)
+//   .main-view
+//     width: 50%
 
-  .sidebar-view
-    width: 50%
+//   .sidebar-view
+//     width: 50%
 
-  .player-body
-    margin-top: 40px
+//   .player-body
+//     margin-top: 40px
 
-  .tracklist-card .tracklist
-    padding-top: 140px
+//   .tracklist-card .tracklist
+//     padding-top: 140px
 
-  .tracklist-card .track
-    padding: 0
+//   .tracklist-card .track
+//     padding: 0
