--- a/src/styles/audio-progress-line.styl
+++ b/src/styles/audio-progress-line.styl
@@ -2,6 +2,7 @@
   position: relative
   height: 10px
   cursor: pointer
+  user-select: none
 
 .apl-bg-line, .apl-fg-line, .apl-load-line
   position: absolute
