--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,6 +1,5 @@
 @import 'config'
 @import 'nib'
-@import 'card'
 @import 'theme-solarized'
 
 *
@@ -49,31 +48,5 @@ html, body, #app
 .icon
   display: inline-block
 
-.player-body
-  transition: margin-top 0.5s ease-in-out
-
-.group-sidebar
-  height: 100%
-
-// @media screen and (min-width: 1100px)
-//   .main-view
-//     width: calc(100% - 520px)
-
-//   .sidebar-view
-//     width: 520px
-
-// @media screen and (min-width: 1400px)
-//   .main-view
-//     width: 50%
-
-//   .sidebar-view
-//     width: 50%
-
-//   .player-body
-//     margin-top: 40px
-
-//   .tracklist-card .tracklist
-//     padding-top: 140px
-
-//   .tracklist-card .track
-//     padding: 0
+.play-btn
+  user-select: none
