--- a/src/styles/two-region.styl
+++ b/src/styles/two-region.styl
@@ -26,10 +26,14 @@
   border-left: 1px solid #E2E2E2
 
 .two-region .rc-bounding-box
+  background-color: rgba(255, 255, 255, 0.95)
   padding: 0 10px
 
 .two-region .rb-bounding-box
-  padding: 110px 10px 0 10px
+  padding: 0 10px
+
+.two-region .rb-content-box .tracklist-body
+  padding: 110px 0 30px 0
 
 @media screen and (min-width: 1400px)
   .two-region .ra-bounding-box,
@@ -44,7 +48,7 @@
     margin: 0 auto
 
   .two-region .rc-bounding-box
-    margin-top: 40px
+    padding-top: 40px
 
-  .two-region .rb-bounding-box
+  .two-region .rc-bounding-box .tracklist-body
     padding-top: 150px
