Using accent as backgrond color for artist profile

--- a/src/styles/theme-solarized.styl
+++ b/src/styles/theme-solarized.styl
@@ -4,8 +4,20 @@ accent-color = accent-violet
 .group-layout .ra-bounding-box
   background-color: base-color-3
 
-.artist-profile
-  background-color: white
+.artist-layout .ra-bounding-box
+  background-color: accent-color
+
+.artist-layout .artist-profile .track-artist,
+.artist-layout .artist-profile .track-title,
+.artist-layout .artist-profile .track-duration
+  color: white
+
+.artist-layout .artist-profile .play-btn,
+.artist-layout .artist-profile .play-btn:hover
+  border-color: white
+
+.artist-layout .artist-profile .play-btn:hover .icon
+  fill: white
 
 .activity-item-0
   fill: base-color-2
