--- a/src/styles/two-region.styl
+++ b/src/styles/two-region.styl
@@ -35,7 +35,8 @@
 .two-region .rb-bounding-box
   padding: 0 10px
 
-.two-region .rb-content-box .tracklist-body
+.main-layout .rb-content-box .tracklist-body,
+.group-layout .rb-content-box .newsfeed
   padding: 100px 0 30px 0
 
 @media screen and (min-width: 1400px)
@@ -53,5 +54,6 @@
   .two-region .rc-bounding-box
     padding-top: 40px
 
-  .two-region .rb-content-box .tracklist-body
+  .main-layout .rb-content-box .tracklist-body,
+  .group-layout .rb-content-box .newsfeed
     padding-top: 140px
