Show previously hidden activity-card weekdays legend

--- a/src/styles/activity-card.styl
+++ b/src/styles/activity-card.styl
@@ -8,10 +8,10 @@
 .activity-name
   font-size: 12px
   font-family: 'Roboto', sans-serif
-  margin: 1em 0
 
 .activity-chart-content
   position: relative
+  margin-top: 3px
 
 .activity-card-weekdays
   position: absolute
