--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -39,7 +39,7 @@ html, body, #app
   line-height: 1.2em
 
 .main-section
-  padding: 20px 2px
+  padding: 20px 2px 10px 16px
 
 .scroll-wrapper
   height: 100%
