Simplify group and main layouts for next visual continuity transition

--- a/src/styles/group-layout.styl
+++ b/src/styles/group-layout.styl
@@ -1,7 +1,7 @@
 @import 'nib'
 @import 'config'
 
-.group-profile
+.group-layout .ra-content-box
   display: flex
   flex-direction: column
   justify-content: space-around
@@ -20,6 +20,6 @@
   overflow: hidden
   margin: 20px auto
 
-.group-profile .activity
+.group-layout .activity
   margin-top: 100px
   padding-left: 16px
