Using activity-chart instead activity-card on group profile page

--- a/src/styles/activity-chart.styl
+++ b/src/styles/activity-chart.styl
@@ -4,6 +4,7 @@
 .activity-chart-content
   position: relative
   margin-top: 3px
+  padding-left: 16px
 
 .activity-chart-weekdays
   position: absolute
