--- a/src/styles/group-layout.styl
+++ b/src/styles/group-layout.styl
@@ -20,6 +20,5 @@
   overflow: hidden
   margin: 20px auto
 
-.group-layout .activity
+.group-layout .activity-chart-content
   margin-top: 100px
-  padding-left: 16px
