Fixed performance issue while updating library tracklist

--- a/src/styles/lazy-tracklist.styl
+++ b/src/styles/lazy-tracklist.styl
@@ -1,9 +1,10 @@
 .lazy-tracklist .tracklist-card
   height: 100%
 
-.lazy-tracklist .track
+.lazy-tracklist .track-container
   position: absolute
   left: 0
+  width: 100%
 
 .lazy-tracklist .tracklist
   padding: 90px 0 40px 0
