Changed style of library tracklist

--- a/src/styles/active-track.styl
+++ b/src/styles/active-track.styl
@@ -10,15 +10,19 @@
 
   font-size: 12px
   font-family: 'Roboto', sans-serif
-  font-weight: 300
+
+.player-body .play-btn
+  margin-right: 15px
+
+.active-track
+  padding: 20px 0
 
 .active-track-artist
   font-weight: 500
 
 .active-track-time
-  margin: 0 15px 10px 15px
-  min-width: 80px
   text-align: right
+  width: 10%
 
 .active-track-separator
   margin: 0 3px
@@ -28,12 +32,12 @@
   white-space: nowrap
   overflow: hidden
   margin-bottom: 10px;
-  width: 79%
+  width: 82%
 
 .active-track-progress
   position: absolute
-  left: 74px
-  right: 15px
+  left: 57px
+  right: 0
   top: 51px
 
 .player-playlist-tabs
