--- a/src/styles/theme-solarized-dark.styl
+++ b/src/styles/theme-solarized-dark.styl
@@ -6,7 +6,7 @@ accent-color = accent-violet
 
 .main-layout .rb-bounding-box,
 .main-layout .rc-bounding-box
-  background-color: white
+  background-color: base-color-02
 
 .artist-layout .ra-bounding-box
   background-color: accent-color
@@ -53,7 +53,7 @@ accent-color = accent-violet
   fill: white
 
 .play-btn-cell .icon
-  fill: base-color-1
+  fill: base-color-01
 
 .play-btn-cell--active .icon
   fill: base-color-3
@@ -63,7 +63,7 @@ accent-color = accent-violet
 
 .track:nth-child(odd),
 .track-container:nth-child(odd)
-  background-color: #F2F2F2
+  background-color: base-color-03
 
 .track--active,
 .track--active:nth-child(odd)
@@ -80,10 +80,10 @@ accent-color = accent-violet
   border: 4px solid white
 
 .apl-bg-line
-  background-color: #EEE
+  background-color: lighten(base-color-02, 5%)
 
 .apl-load-line
-  background-color: #DDD
+  background-color: lighten(base-color-02, 10%)
 
 .apl-fg-line,
 .apl-seek
@@ -112,4 +112,4 @@ accent-color = accent-violet
   color: base-color-00
 
 .active-track
-  color: base-color-00
+  color: base-color-3
