Using router directly to render app layout

--- a/src/styles/theme-solarized-dark.styl
+++ b/src/styles/theme-solarized-dark.styl
@@ -5,7 +5,9 @@ accent-color = accent-violet
   background-color: base-color-3
 
 .main-layout .rb-bounding-box,
-.main-layout .rc-bounding-box
+.main-layout .rc-bounding-box,
+.group-layout .rb-bounding-box,
+.group-layout .rc-bounding-box
   background-color: base-color-02
 
 .artist-layout .ra-bounding-box
