Added 'next n' button to tracklist

--- a/src/styles/theme-solarized-dark.styl
+++ b/src/styles/theme-solarized-dark.styl
@@ -115,3 +115,9 @@ accent-color = accent-violet
 
 .active-track
   color: base-color-3
+
+.tracklist-more
+  color: base-color-00
+
+.tracklist-more:hover
+  color: accent-cyan
