--- a/src/styles/tracklist.styl
+++ b/src/styles/tracklist.styl
@@ -19,3 +19,8 @@
   text-align: center
   color: base-color-0
   margin-bottom: -10px
+
+.tracklist-more
+  text-align: center
+  margin: 10px 0
+  cursor: pointer
