Using accent color instead cyan in playlist panel

--- a/src/styles/theme-solarized.styl
+++ b/src/styles/theme-solarized.styl
@@ -47,7 +47,7 @@ accent-color = accent-violet
   color: accent-color
 
 .play-btn
-  background-color: accent-cyan
+  background-color: accent-color
 
 .play-btn .icon
   fill: white
@@ -67,7 +67,7 @@ accent-color = accent-violet
 
 .track--active,
 .track--active:nth-child(odd)
-  background-color: accent-cyan
+  background-color: accent-color
   color: base-color-3
 
 .tracklist
@@ -87,7 +87,7 @@ accent-color = accent-violet
 
 .apl-fg-line,
 .apl-seek
-  background-color: accent-cyan
+  background-color: accent-color
 
 .auth
   background-color: accent-color
