Using jsx for ui/player

--- a/src/styles/active-track.styl
+++ b/src/styles/active-track.styl
@@ -22,7 +22,7 @@
 
 .active-track-time
   text-align: right
-  width: 10%
+  margin-bottom: 10px
 
 .active-track-separator
   margin: 0 3px
@@ -36,7 +36,7 @@
 
 .active-track-progress
   position: absolute
-  left: 57px
+  left: 55px
   right: 0
   top: 51px
 
