--- a/src/styles/track.css
+++ b/src/styles/track.css
@@ -5,6 +5,7 @@
   width: 100%;
   padding: 0 5px;
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
   font-size: 0.9em;
   transition: background-color 0.1s ease-in;
 }
