--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,33 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
+}
+
+html,
+body,
+#app,
+.app-container {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 70px 0;
+}
+
+.icon {
+  display: inline-block
+}
+
+.scroll-wrapper {
+  height: 100%;
+  overflow: hidden;
 }
