--- a/src/styles/playlist.css
+++ b/src/styles/playlist.css
@@ -1,7 +1,35 @@
 .playlist {
+  display: flex;
+  flex-direction: column;
   width: 800px;
+  height: 100%;
 }
 
 .playlist__header {
-  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 1.5em;
+  padding-left: 4rem;
+  height: 80px;
+  line-height: 80px;
+}
+
+.playlist__content {
+  height: calc(100% - 80px);
+}
+
+.playlist__table {
+  height: calc(100% - 41px);
+}
+
+.playlist__columns {
+  display: flex;
+  align-items: center;
+  height: 30px;
+  width: 100%;
+  padding: 0 5px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  text-transform: uppercase;
+  font-size: .8rem;
 }
