Move animation logic to MainLayout

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -31,3 +31,11 @@ body,
   height: 100%;
   overflow: hidden;
 }
+
+.main-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
