Create Profile ui component, load user details

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -69,3 +69,7 @@ $accent-color: $accent-violet;
 .command-palette__todo {
   color: $accent-color;
 }
+
+.profile__name {
+  color: $base-color-0;
+}
