Using solarized green as the selection bg color

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -18,6 +18,11 @@ $accent-green: #859900;
 
 $accent-color: $accent-violet;
 
+::selection {
+  background-color: $accent-green;
+  color: $base-color-3;
+}
+
 .track {
   color: $base-color-00;
 }
