--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,8 +8,7 @@ body {
 
 html,
 body,
-#app,
-.app-container {
+#app {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -39,6 +38,7 @@ body,
   align-items: center;
   width: 100%;
   height: 100%;
+  padding-top: 100px;
 }
 
 .main-layout__play-btn {
@@ -53,4 +53,13 @@ body,
   right: 0;
   top: 0;
   padding: 20px 30px;
+}
+
+.app-cmd {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+  margin-top: 70px;
 }
