--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -62,3 +62,12 @@ body,
   height: 100px;
   margin-top: 70px;
 }
+
+section {
+  width: 100%;
+}
+
+.group-page {
+  width: 100%;
+  background-color: #4679CB;
+}
