--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -64,10 +64,34 @@ body,
 }
 
 section {
+  display: block;
   width: 100%;
+}
+
+content {
+  display: block;
+  width: 800px;
+  margin: 0 auto;
+}
+
+header {
+  padding: 20px 0;
+  display: block;
+  font-size: 2rem;
+  font-weight: 100;
 }
 
 .group-page {
   width: 100%;
-  background-color: #4679CB;
+}
+
+.group-page__content {
+  padding-bottom: 100px;
+  min-height: 500px;
+}
+
+.scroll-container {
+  overflow: auto;
+  width: 100%;
+  height: 100%;
 }
