Change accent color to pink

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -16,7 +16,7 @@ $accent-blue: #268bd2;
 $accent-cyan: #2aa198;
 $accent-green: #859900;
 
-$accent-color: #72ADA0;
+$accent-color: #FD76B3;
 $accent-text-color: #FFF;
 $primary-color: #8386B9;
 $primary-dark-color: #5A5D9C;
