--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -18,9 +18,9 @@ $accent-green: #859900;
 
 $accent-color: #FD76B3;
 $accent-text-color: #FFF;
-$primary-color: #8386B9;
+$primary-color: #6c71c4;
 $primary-dark-color: #5A5D9C;
-$primary-text-color: #FFF;
+$primary-text-color: #FDF6E3;
 $base-text-color: #657b83;
 
 ::selection {
