--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -28,6 +28,15 @@ $base-text-color: #657b83;
   color: $primary-text-color;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: $accent-color;
+}
+
 .track {
   color: $base-text-color;
 }
